Added pujas pages and changed background-color

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,12 @@
 a {
   color: #00B7FF;
 } */
+
+/* body {
+  background-color: #fbedbf;
+} */
+
+
 /* fonts styles for registration form */
 .registration-font {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
