--- a/views/antim-sanskar.hbs
+++ b/views/antim-sanskar.hbs
@@ -3,22 +3,34 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Antim Sanskar puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Antim Sanskar puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/antim-sanskar.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>The soul is the essence and immortal that is released at the Antyeshti ritual, but both the body
+                             and the universe are vehicles and transitory in various schools of Hinduism. The human body and
+                              the universe consist of five elements in Hindu texts – air, water, fire, earth and space. The last
+                               rite of passage returns the body to the five elements and its origins.The roots of this belief are
+                                found in the Vedas, for example in the hymns of Rigveda in section 10.16, as follows, Burn him not
+                            up, nor quite consume him, Agni: let not his body or his skin be scattered, O all possessing Fire,
+                            when thou hast matured him, then send him on his way unto the Fathers. When thou hast made him ready
+                            , all possessing Fire, then do thou give him over to the Fathers, When he attains unto the life that waits
+                            him, he shall become subject to the will of gods. The Sun receive thine eye, the Wind thy Prana (life-principle,
+                            breathe); go, as thy merit is, to earth or heaven. Go, if it be thy lot, unto the waters; go, make thine 
+                            home in plants with all thy members. 
+
+                        </p>
+                               
                     </div>
                 </div>
                 <hr>
@@ -36,6 +48,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
