--- a/views/book-puja.hbs
+++ b/views/book-puja.hbs
@@ -6,7 +6,7 @@
         <title>Billing Page </title>
         <link rel="stylesheet" href="/stylesheets/modal.css">
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <p>Puja is an act of displaying veneration to god through invocations and numerous rituals. a very important 
@@ -20,22 +20,13 @@
                  additionally to general pujas, special online puja are performed throughout numerous occasions and 
                  events. Find Ur Panditji provides online puja booking services and also conducts pujas at devotees home.
             </p>
-            <h1>Puja links:</h1>
 
-            <a href="./annaprashan">Annaprashan Puja</a> <br />
-            <a href="./bhoomi-puja">Bhoomi Puja</a> <br />
-            <a href="./gauri-puja">Gauri Puja</a>   <br />
-            <a href="./annaprashan.">Annaprashan Puja</a>   <br />
-            <a href="./annaprashan.">Annaprashan Puja</a>   <br />
-            <a href="./annaprashan.">Annaprashan Puja</a>   <br />
-            <a href="./annaprashan.">Annaprashan Puja</a>   <br />
-
-            
         </div>
         
         <div class="container">
-            <h1>Puja links:</h1>
+            <h2>Puja links:</h2>
             <form class="form-group form-horizontal">
+                {{!-- first row 4 coloumns --}}
                 <div class="row">
                     <div class="col">
                         <div class="polaroid">
@@ -65,7 +56,116 @@
                         <div class="polaroid">
                             <img src="/images/pujas/bhoomi2.png", alt="island">
                             <div class="img-container">
-                                <p><a href="gauri-puja">jk,bPuja</a></p>
+                                <p><a href="mahamrityunjaya">Mahamrityunjaya Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+
+                {{!-- second row 4 coloumns --}}
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="rudrabhishek">Rudrabhishek Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="dhanteras-puja">Dhanteras Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="kaalsarp-puja">Kaal Sarp Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="navratri-puja">Navratri Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+
+                {{!-- third row 4 coloumns --}}
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="durga-puja">Durga Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="shiv-puja">Shiv Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="krishna-puja">Krishna Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="mata-ki-chowki">Mata ki Chowki</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="saraswati-puja">Saraswati Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="laghu-rudra-puja">Laghu Rudra Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="hanuman-puja">Hanuman Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="akhand-ramayan-paath">Akhand Ramayan Path</a></p>
                             </div>
                         </div>
                     </div>
@@ -73,26 +173,189 @@
                 </div>
 
                 <div class="row">
-                    
                     <div class="col">
                         <div class="polaroid">
                             <img src="/images/pujas/bhoomi2.png", alt="island">
                             <div class="img-container">
-                                <p><a href="bhoomi-puja">Bhoomi Puja</a></p>
+                                <p><a href="sundarkand-path">Sundarkand Path</a></p>
                             </div>
-                            </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="polaroid">
-                            <img src="/images/annprashan2 (2).jpg", alt="island">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
                             <div class="img-container">
-                                <p>Cinque terrs</p>
+                                <p><a href="vishnu-sahasranama">Vishnu Sahasranama Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="mangal-dosh-nivaran">Mangal Dosh Nivaran Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="pitra-dosh-nivaran">Pitra Dosh Nivaran Puja</a></p>
                             </div>
                         </div>
                     </div>
                         
                 </div>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="shani-dosh-nivaran">Shani Dosh Nivaran Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="mool-shanti">Mool Shanti Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="naamkaran-puja">Naamkaran Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="mahashivratri-puja">Mahashivratri Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="ganpati-sthapna">Ganpati Sthapna Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="birthday-puja">Birthday Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="mundan-puja">Mundan Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="shradh-puja">Shradh Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="antim-sanskar">Antimsanskar</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="satyanarayan-puja">Satyanarayan Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="grih-pravesh-puja">Grih Pravesh Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="vivah-puja">Vivah Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="ganpati-puja">Ganpati Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="laxmi-puja">Laxmi Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="naamkaran-puja">Naamkaran Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    {{!-- these are repeated ones --}}
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="mahashivratri-puja">Mahashivratri Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+
+                
             </form>
         </div>
         {{> footer}}
