--- a/views/dhanteras-puja.hbs
+++ b/views/dhanteras-puja.hbs
@@ -3,22 +3,30 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Dhanteras puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Dhanteras puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/dhanteras.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>The festival of Dhanteras is celebrated two days prior of Diwali festival. People celebrate this
+                             festival with great enthusiasm, devotion and prosperity. This festival is celebrated in Maharashtra,
+                              Northern India and in Gujarat. This festival is dedicated to Lord Dhanvantari who is the doctor of all
+                               the Gods. The important ritual that is being performed on this day is the Lakshmi Puja done in the evening.
+                                There are no particular rituals followed on this day as the manner in which this festival is celebrated 
+                                varies from region to region. On this day people purchase or do shopping of the gold or silver things.
+                                 This day is considered to be very favorable for all the new purchases or investments done. On this day
+                                  people lit the first lamps of the Diwali festival. Lanterns are being decorated and are sold in the market
+                                   to indicate the arrival of the Diwali festival.                     
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +44,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
