--- a/views/durga-puja.hbs
+++ b/views/durga-puja.hbs
@@ -3,22 +3,32 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Durga puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Durga puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/durga-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Goddess Durga is the essence of women motherhood and power. Durga Puja is the day when all the
+                             devotees worship the Goddess Durga with great devotion. Devotees worship her as power which
+                              formed the universe. Goddess Durga plays a role of protector for their devotees and becomes 
+                              destructor. Durga puja celebrated all over the world. here, we will ensure you to know the complete
+                               information about the Durga puja festival. During the duration of Durga Puja, devotees worshipped
+                                the Goddess Durga as Nav Durga. The exact date and time of Durga Puja are decided according to the
+                                 Hindu calendar. During the ten auspicious days of Durga Puja celebrations, many different 
+                                 rituals are performed. But in last five days of Durga Puja- Maha Saptami, Maha Shashthi, Vijay Dashmi and
+                                  Maha Navami are celebrated with great festivity, zeal and enthusiasm all over the world.Its a easy way
+                                   to find and book pandit online. Book pandit online through allpanditji.com is the most trustworthy way 
+                                   to find panditji.
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +46,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
