--- a/views/ganpati-puja.hbs
+++ b/views/ganpati-puja.hbs
@@ -3,22 +3,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Ganpati Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Ganpati Puja   
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/ganpati-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>
+                            Lord Ganesha is worshipped first in any puja. This is considered as the good luck; perform first
+                             prayer to Ganesha ji before starting any new work. Lord Ganeshas’s other name is ‘Vighanharta’ or’Vinayaka’
+                              means he removes all the obstacles. The Ganesha ji is also measured as the Lord of knowledge and wisdom.
+                               As per the belief, one can obtain wisdom and become an intelligent enough to know what is good and what
+                                is not, when he or she offer the prayers to Lord Ganesha with honesty. As per the Hindu beliefs,
+                                 before starting any new work or any puja, chant Ganesha ji mantra for good results. 
+                        </p>
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +43,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
