--- a/views/grih-pravesh-puja.hbs
+++ b/views/grih-pravesh-puja.hbs
@@ -3,22 +3,45 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Grah Pravesh Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Grah Pravesh Puja  
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/grah-pravesh.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>
+                            Puja for new house is also referred as the Griha Pravesh Puja. This puja is performed before
+                             entering into the new house for the first time. Once the house is constructed and ready to
+                            move in the family, take the help of a priest to determine the auspicious muhurat to move
+                            in the house. The priest determine the muhurat by the help of astrological charts and the panchangs.
+                                There are three types of Griha Pravesh mentioned in the ancient Vedic scriptures, which are Approva,
+                            Sapoorva, and the Dwandwah. The Aproova is performed during the first time entry in the newly constructed
+                            house. It is also termed as new griha pravesh. The Sapoorva is performed during the entry into an already 
+                            constructed house. When the family migrates from one place to other or come back after travelling
+                            abroad this puja is performed. The last puja, dwandwah is performed after reconstruction of the
+                            house after damage from fire, earthquake, or flood.You can book panditji online for vastu shanti
+                                and griha pravesh with samagri.
+                        </p>
+
+                        <ol>
+                            <strong>Griha Pravesh Puja(House Warming Ceremony) Includes</strong> 
+                            <li>Kalash Sthapana</li>
+                            <li>Ganpati & Gouri Puja</li>
+                            <li>Enter To New Home</li>
+                            <li>Navgrah Puja</li>
+                            <li>Vastu Shanti</li>
+                            <li>Havan</li>
+
+                        </ol>
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +59,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
