--- a/views/kaalsarp-puja.hbs
+++ b/views/kaalsarp-puja.hbs
@@ -3,22 +3,28 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Kaal sarp puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Kaal sarp puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/kalp-sarpesh.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Kalsarp Dosha Nivaran is formed when all the planets are situated between Rahu & Ketu. When all 
+                            the planets are hemmed between Rahu and Ketu i.e., the moon's north node and the moon's south node
+                             Kal Sarp Yoga is formed. At times a few planets are outside the circumference or reach of rahu and ketu. 
+                             This yog brings negative thoughts in our mind and also creates fear in our mind. A yantra is made by man and
+                              it has to be energized through mantras from the Vedas so that it helps the person connect with the higher power. 
+                              This process of energizing the yantra is undertaken by priests. The process of placing this energized yantra in homes
+                               is also important and must be followed in a right manner. There are 12 Types of Kalsarp Pooja. 
+                    </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +42,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
