--- a/views/krishna-puja.hbs
+++ b/views/krishna-puja.hbs
@@ -3,22 +3,34 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Shiv puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Shiv puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/krishna-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Krishna Puja or Janamashti is celebrated on the occasion of the birth of Lord Krishna. Lord Krishna,
+                             the 8th son of Devaki and Vasudev, was born on the Ashtami day under the ‘Rohini Nakshatram’ at
+                              midnight. It is also known as Gokulashtami or Krishna Jayanti. Shree Krishna is considered as the
+                               most glorious avatar (incarnation) of Lord Vishnu, also his 8th avatar on earth. Ordinarily Janmashtami 
+                               is celebrated in divine form at Dwarka. In Dwarka , this festival takes a pious mood. On Sri Krishna Janmashtami
+                                devotees worship lord Krishna in Dwarkadhish temple it is the centre of attraction at Dwarka Nagri. For almost
+                                 a century lord Krishna reside at Dwarka. After his decease, it got inundated into the sea. The supreme
+                                  architect named as Vishwakarma built the city of Dwarka in just two days with numerous places in it. It is believed
+                                   that the birth of Lord Krishna was a symbol of victory of Dharma over Adharma. This day is celebrated with great delight and pleasure
+                                    in Mathura where Shree Krishna was born. People offer sweets and ‘Makhan Mishri’ to each other which is considered favourite of 
+                                    lord Krishna. On the next day of Krishna Jayanti, the festival of ‘Handi Fod’ is celebrated with great enthusiasm in
+                                     some parts of the country. 
+                        </p>
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +48,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
