--- a/views/laxmi-puja.hbs
+++ b/views/laxmi-puja.hbs
@@ -3,22 +3,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Laxmi puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Laxmi puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/laxmi.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Laxmi puja was performed as a symbol of lord Ram’s victory over Raavan in the fierce battle between lord Rama and Raavan in Lanka. The return of lord Ram to Ayodhyamp was celebrated with great pomp and show. Shree Ram was coronated and Laxmi puja was performed by the people of Ayodhya. Lakshmi puja is also commonly referred to as Diwali puja which is conducted in honor of Maa Sita (lord Rams missus) This festival is sub divided into several other festivals like Bhaiya Dooj, Dhanteras, Govardhan Puja, Narak Chaturdasi, and Diwali. These all festivals make the celebration of Diwali more exciting and prosperous. According to the legend, Goddess Laxmi came in the form of Maa Sita and by performing Laxmi puja Goddess Laxmi is pleased and she bestows her devotees with blessings and wealth. Houses are adorned and cleaned during Diwali with the intensions that goddess Laxmi would bring in joy, prosperity and ensures that her worshippers live in peace and a state of well-being. A magnificent light of knowledge is said to unfold on this day. This self-enlightenment is asserted through the gleaming lamps that illuminate the abode of the worshippers. Karthik Krishna Amavasya is considered to be the most auspicious day to perform Laxmi puja. allpanditji.com provides you Experienced panditji for Laxmi puja / Diwali Puja with samagri. 
+                        The muhurat or auspicious timing for conducting Lakshmi Pujan this year is between 5.57 pm and 7.53 pm on November 7th, 2018. 
+                        Diwali 2018 Dates in India & Calendar
+                        Diwali 2018 Dates	Diwali Festival
+                        Dhanteras 2018	5th November 2018
+                        Chhoti Diwali/Narak Chaturdashi 2018	6th November 2018
+                        Badi Diwali/ Lakshmi Pujan 2018	7th November 2018
+                        Govardhan Puja 2018	8th November 2018
+                        Bhai Duj/Bhau Beej 2018	9th November 2018
+
+                    </p>>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +45,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
