--- a/views/laxmi.hbs
+++ b/views/laxmi.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Laxmi </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2>Laxmi ji</h2>
