--- a/views/mahashivratri-puja.hbs
+++ b/views/mahashivratri-puja.hbs
@@ -3,22 +3,41 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Mahashivratri Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Mahashivratri Puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/shivratri-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Shivaratri Pooja has been given tremendous significance in Hindu mythology. It is said that
+                             ritual worship of Lord Shiva on a Shivaratri day pleases Lord Shiva the most. Devotees further
+                              believe that by pleasing Lord Shankara on the auspicious Shivaratri day, a person is absolved of
+                               past sins and is blessed with Moksha or salvation. Besides, worship of Lord Shiva on Shivratri
+                                is also considered to be extremely beneficial for women. While, married women pray to Shiva for
+                                 the well being of their husbands and sons, unmarried women pray for a husband like Shiva, who
+                                  is considered to be the ideal husband. 
+                                Merits of Shivaratri Puja
+                                According to Shiva Purana, sincere worship of Lord Shiva yields merits including
+                                 spiritual growth for the devotees. It also provides extensive details on the right way to
+                                  perform Shivratri Puja. 
+                        </p>
+                        <ul>
+                            <li>Milk is for the blessing of purity and piousness.</li>
+                            <li>Yogurt is for prosperity and progeny.</li>
+                            <li>Honey is for sweet speech.</li>
+                            <li>Ghee is for victory.</li>
+                            <li>Sugar is for happiness.</li>
+                            <li>Water is for purity.</li>
+                        </ul>
+                               
                     </div>
                 </div>
                 <hr>
@@ -36,6 +55,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
