--- a/views/mangal-dosh-nivaran.hbs
+++ b/views/mangal-dosh-nivaran.hbs
@@ -3,22 +3,38 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Mangal Dosh Nivaran Puja page </title>
     </head>
-    <body style="background-color: #fbedbf;">
+    <body> style="background-color: #fbedbf;"
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Mangal Dosh Nivaran Puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/mangal-dosh.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>If planet Mars (“Mangal” or “Kuja“) is situated in the 1st, 2nd, 4th, 7th, 8th or 12th house
+                             of a person’s Rashi (Indian astrological moon sign) when he/she is born; then that person
+                              is a “Manglik” (also called “Mangalik“).
+                            It is believed that “Mangalik Dosha” (or “Manglik Dosh” or “Mangal Dosha“) mainly impacts
+                             a person’s married life. It can lead to disharmony and tension between the husband and wife.
+                              Some also believe that marriage between a Manglik and a non-Manglik can lead to the untimely
+                               death of one of the partners. According to jyotishshastra if Mangal presences in the first,
+                                fourth, seventh, eighth and twelth position in janmakundali then man or woman called mangalik.
+                                 In this situation he or she has suffer from severl problems. Sometimes it cause for late merrige.
+                                  In that case bride and groom both must be mangalik. By the effect of mangaldosha of man or woman
+                                   has face sometime short age, illness and other problems. Mangal shanti is the only one solution 
+                                   of all these problems. Mangal shanti pujan has organise only in Mangalnath temple. Bhat puja
+                                    is the only one method for that type of puja. 
+
+
+                        </p>
+                        
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +52,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
