--- a/views/mata-ki-chowki.hbs
+++ b/views/mata-ki-chowki.hbs
@@ -3,22 +3,35 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Mata ki chowki page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Mata ki chowki puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/durga-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Mata ki Chowki is a religious get together, through Chowkis. Mata Ki Chowki is short time kirtan
+                             which can be performed at any time throughout the day, anytime of the year. In Mata Ki Chowki,
+                              the group preaches about Mata, sings “Jagrata” and motivates devotees all over the world to pay
+                               their respects through their prayers. This program, can be organised on the happy occasions such
+                                as Weddings, Engagements, Birthdays, Anniversaries or during Ganpati and Navratri festivals.
+                                 Maa Durga is the embodiment of the divine energy and the creative power. Maa Durga reigns as
+                                  the Mother Goddess, amongst the Goddesses worshiped by Hindus. Although there are innumerable
+                                   forms of Goddesses and ultimately all are one, yet Durga-form is the most popular one. In Vedic
+                                    Mantras, the Mother is the Prime God.  There is enough devotional music, —which makes it easier
+                                     for the people in attendance to dance and enjoy the entire night of Jagran and Mata Ki Chowki.
+                                      Also, sometimes there are these artistes, dressed as different Gods, while dancing on the bhajans
+                                       and keeping everyone in full bhakti mode. 
+ 
+                        </p>
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +49,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
