--- a/views/mool-shanti.hbs
+++ b/views/mool-shanti.hbs
@@ -3,22 +3,35 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Mool Shanti Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Mool Shanti Puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/mool-shanti.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>The Mool Shanti Yagya/ Puja is performed to remove the negative effects of the person’s moon position
+                             in Ashlesha, Moola, Aswini, Magha, Revati, and Jyeshtha. According to the native chart, the Yajna can
+                              be combined with Homam to Durga, Ganesha, Siva or Vishnu or with the Homam of Navgrah Shanti.
+                               The Mool Shanti Yagya is done to keep up the Health of the person, Health of the kids and to remove
+                                the Navgrah Dosha.
+                            Benefits of Mool Shanti Yagya The Mool Shanti Yagya is very helpful in the life of a person as it benefits
+                             the human being in the enhancement of character and brings the positive feelings by reducing all the ill 
+                             effects of the Nakshatra, which was due to the specific birth time.
+                            All the physical condition related issues are being removed and the life is being lived with full of wealth.
+                            The danger to near and dear ones due to birth at inauspicious time is also averted. 
+
+
+                        </p>
+                        
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +49,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
