--- a/views/mundan-puja.hbs
+++ b/views/mundan-puja.hbs
@@ -3,22 +3,32 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Mundan Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Mundan Puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/mundan-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>The Mundan ceremony is performed due to a belief that the newborn baby’s hair has the undesired
+                             traits of the past life. Hence, the hair of the newborn baby is considered impure as it may have
+                              the negative effects of the past life on the future life. So, head shaving is done to purify the
+                               soul of the baby and ensure the prosperous life of the baby. It is also believed that Mundan reduces the 
+                               body temperature of the baby and making the baby calm. It also enhances and improves the blood circulation. 
+                               As per the Vedas, Mundan is a purifying ritual. There are sixteen Sanskars or ceremonies needed to be
+                                performed in a person’s life and Mundan puja is one of them. Mundan puja is also known as Chudakarana ceremony
+                                 where baby’s hair is shaved off for the first time. Mundan Puja is performed for both boys and girls. 
+
+ 
+                        </p>
+                               
                     </div>
                 </div>
                 <hr>
@@ -36,6 +46,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
