--- a/views/naamkaran-puja.hbs
+++ b/views/naamkaran-puja.hbs
@@ -3,22 +3,33 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Naamkaran Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Naamkaran Puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/naamkaran.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>In the Hindu way, every child born is named and this ceremony is called the naamakaranam. This
+                             function is not just a religious one but also has the social and the legal aspects to it. 
+                             This is the first ceremony in a baby’s life and so it helps to forge a good bond between the
+                              baby and his or her family. It is usually conducted after the 12th day of birth but this differs
+                               as per region and custom.    Namkaran is the naming ceremony performed for each Hindu kid. It’s a
+                                spiritual practice of initiating {a child|a toddler|a baby} into a faith and at a similar time reminding
+                                 the parents of the newborn child their duties and responsibilities. Namkaran Sanskar Puja is a ritual of
+                                  providing Samskaaras to the kid, that is considered to be of utmost importance in shaping the character and
+                                   upbringing of a child. As per Vedas and Sutras, certain guidelines are needed to be followed while naming the
+                                    newborn. As per Grihya Sutra, a child should be named on the following basis. 
+
+                        </p>
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +47,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
