--- a/views/pitra-dosh-nivaran.hbs
+++ b/views/pitra-dosh-nivaran.hbs
@@ -3,22 +3,36 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Pitra Dosh Nivaran Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Pitra Dosh Nivaran Puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/pitra-dosh-nivaran.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Pitra puja is a way to give respect to ancestors.
+                        For the late departed ancestors prita paksh is observed once in a year in Bhadrapad / Ashwin
+                         months into the autumn. 
+                        Its duration is of 15 days from Purnima (full moon) to Amavas (new moon). We also call it Shradh,
+                         Sharadh Pakhwada, Sharadh Parv, by which you get blessing from departed ancestors in which we
+                          repay to them by this ritual.
+                        Many problems may occur in one’s life their Pitras are not happy. Pitra Dosh is not a curse from
+                         the ancestors, but it is a debt of the ancestors. The person having Pitra Dosh in his horoscope
+                          is supposed to pay for the ancestor’s debt. So a Pitra Dosh in a horoscope does not mean that
+                           the ancestors are cursing the person having Pitra Dosh in his horoscope. Pitra dosh is undoubtedly 
+                           one of the most feared doshas in a horoscope according to Vedic astrology and it can trouble the
+                            native with various kinds of problems and misfortunes in all spheres of his life. 
+
+                        </p>
+                        
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +50,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
