--- a/views/saraswati-puja.hbs
+++ b/views/saraswati-puja.hbs
@@ -3,22 +3,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Saraswati page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Saraswati puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/saraswati-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>It is believed that on this day goddess Saraswati was born. Hindus celebrate Vasant Panchami with
+                             great fervor in temples, homes and even schools and colleges. Saraswati’s favorite color white
+                              assumes special significance on this day. Statues of the goddess are dressed in white clothes
+                               and are worshiped by devotees adorning white garments. Saraswati is offered sweets which are
+                                given away as ‘prasad’ to all people attending the ritual worship. There is also a custom of
+                                 ancestor worship, known as ‘Pitri-Tarpan’ in many parts of India during Vasant Panchami. 
+ 
+                        </p>
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +43,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
