--- a/views/satyanarayan-puja.hbs
+++ b/views/satyanarayan-puja.hbs
@@ -3,22 +3,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Satyanarayan Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Satyanarayan Puja  
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/satyanarayan.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>
+                            The ritual worship of Lord Vishnu or Sri Satyanarayan Puja is generally performed on a full4
+                             moon day or Purnima of every month or on any special occasion such as achieving a milestone
+                              or fulfilling a wish, as a special thanksgiving to the Godhead of the Hindu Trinity. The months
+                               of Kartik, Vaisakh, Shravan and Chaitra in the Hindu are ideal for this ritual. It can also be
+                                observed on new moon day or on a Sankranti – the beginning or end of a Hindu month.
+                            Mahalakshmi Pooja Hindu Satyanarayana Pooja Vishnu Fasting Hindus believe that repeatedly chanting 
+                            the name of Sri Satyanarayan or Lord Vishnu with love while listening to the Satyanarayan Katha or 
+                            moral stories can help one lead a righteous life 
+                            Satyanarayan Puja Includes :
+                        </p>
+                        <ul>
+                            <li>Kalash Sthapana</li>
+                            <li>Ganpati & Gouri Puja</li>
+                            <li>Navgrah Puja</li>
+                            <li>Satyanarayan Puja</li>
+                            <li>5 Stories</li>
+                            <li>Havan(Optional)</li>
+                            
+                         </ul>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +54,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
