--- a/views/shani-dosh-nivaran.hbs
+++ b/views/shani-dosh-nivaran.hbs
@@ -3,22 +3,30 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Shani Dosh Nivaran Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Shani Dosh Nivaran Puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/shani-dosh-nivaran.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>The ShaniDoshaNivaranaPooja is used to remove the Shani/Saturn dosha and to achieve the Rajayoga
+                             through the absolute sanction of Shani. This Pooja proves to be very beneficial when the Saturn
+                              is afflicted in the horoscope. During the depression time the ShaniYantrais very useful. This
+                               Pooja indicates the success in the personal life as well as in the professional life. The Pooja
+                                is basically performed to achieve blessings of Lord Shani and to justify the shanidosha. The
+                                 position of Shani in the specific house of the natal horoscope causes problem to the natives.
+                                  The effect of Shani is very low as it is a very slow moving planet. 
+                        </p>
+                        
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +44,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
