--- a/views/shradh-puja.hbs
+++ b/views/shradh-puja.hbs
@@ -3,22 +3,50 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Shradh Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Shradh Puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/shradh-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Shradh is an important ritual as per the Hindu tradition. It is performed as a Puja to salvation aka
+                             atma shanti of departed ancestors (paternal as well as maternal). It is an act of tribute and respect
+                             , devotion towards ancestors. 
+                            Performing this puja for ancestors will bring good fortune to their descendants and thereby receiving 
+                            positive energies for progress. The descendant also receives blessings from the pitra/forefathers to 
+                            help him materially. This can greatly help the individual to progress spiritually as the material
+                             obstacles or problems are eradicated. This puja is very powerful and effects on health and curing
+                              serious diseases. This is being done for getting recovery from chronic diseases and other body aliments.
+                               Those who are invariably suffering from any aliments shall get this puja done for early recovery.
+                                This puja is specifically suitable for Success in Business or Career , Protection from Evils and Enemies. 
+                        </p>
+                        <p>
+                            Tarpan : ‘Trup’ means satisfying others. The word ‘Tarpan’ has been formed from the root word
+                             ‘Trup’. Offering water to God, Sages, ancestors’ soul and human beings and satisfying them
+                              through it is called tarpan. 
+                        </p>
+                        <p>
+                            Posture of hand while offering Tarpana  The posture of hand while offering Tarpana varies for
+                             offerings made to devas (Gods, Goddesses and Navagrahas), rishis (sages) and pitrus (departed ancestors).
+                            <br>(a) For devas, the offering is made to flow over the four fingers of the right hand other than the thumb.
+                            <br>(b) For rishis, the offering is made to flow on the area of the left side of the right palm between the wrist and the little finger.
+                            <br>(c) For the pitrus, the offering is made to flow over the right side of the right palm and the thumb of the right hand.
+                            <br>
+                            for offering Tarpana 
+                            It is believed that one’s pitrus will be eagerly awaiting for tarpana on all the above-mentioned
+                             occasions. If no offering is made, they will return to their places disappointed, and the descendant
+                              misses their blessings which he would have received, if he had performed his filial duties. 
+
+                        </p>
+                               
                     </div>
                 </div>
                 <hr>
@@ -36,6 +64,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
