--- a/views/sundarkand-path.hbs
+++ b/views/sundarkand-path.hbs
@@ -3,22 +3,45 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Sundarkaand Paath page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Sundarkaand Paath
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/sundarkand-path.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Sunderkand is the fifth chapter of the Hindu holy book called ‘Ramayan’. The Ramayana has been 
+                            divided into following chapters by Tulsidas as per the events and importance of the life of
+                             lord shri Ram.
+                        </p>
+                        <ul>
+                            <li>Balyakand</li>
+                            <li>Ayodhyakand</li>
+                            <li>Aranyakand</li>
+                            <li>Kishkindhakand</li>
+                            <li>Sunderkand</li>
+                            <li>Lankakand</li>
+                            <li>Utarakand</li>
+                        </ul> 
+                        <p>
+                            The Sundarkand is the fifth chapter and the most blessed Kand of Ramayana .The section details
+                             Hanumanji's journey to Lanka in search of Maa Sita. Reciting the Sundarkand is considerd as
+                              very auspicious and it is one of the best methods to worship Hanumanji.Sudarkand commences with 
+                              Jamba van reminding Hanumanji about his powers and Hanumanji setting on the journey to Lanka to find Maa
+                               Sita.Sundar Means beautiful,also one of the names of Hanumanji is Sundar.Sundarkand states qualities of
+                                Hanumanji and that for Hanumanji nothing is impossible.Sundarkand teaches us that Dharma alone will triumph.
+                                 Hanuman puja is considered to fulfill all wishes . In Scriptures there are number of steps to get its blessings 
+                                 and one of them is Sunderkand Paath. In Ram Charit Manas too much importance has been given to Sunderkand. 
+
+                        </p>
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +59,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
