--- a/views/vivah-puja.hbs
+++ b/views/vivah-puja.hbs
@@ -3,22 +3,34 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Vivah Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Vivah Puja  
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/vivah-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>
+                            findurpanditji.com provides you panditji for marriage/wedding at reasonable price.
+                            Hindu vedic marriage is most important ceremony in every individual’s life where and 
+                            man and a woman take pledge for a lifetime of commitment and trust. On this special occasion
+                            , we thank the almighty and conduct vivah rituals to take blessings from the god and goddesses
+                            . Our shastras believed that marriage is a means to thank our ancestors and for us to take our
+                             customs and traditions forward by continuing the family. 
+                            7 Commitments of Marriage:- Always remember the divine. Always treat each other with sympathy,
+                             love and compassion. Help each other in all good deeds. Keep in mind pure and virtuous.
+                              Be strong and righteous. Show goodwill and affection to parents, brothers, sisters and other
+                               family members. Bring up the children in such a manner that they are strong in mind and body. 
+                               Always welcome and respect guests. 
+                        </p>
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +48,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
