--- a/views/akhand-ramayan-paath.hbs
+++ b/views/akhand-ramayan-paath.hbs
@@ -3,22 +3,32 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Akhand Ramayan Paath page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Akhand Ramayan Paath
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/akhand-ramayan.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Akhand Ramayan Paath means singing/reciting the whole Ramyan without any break for continuously
+                             24 hours. By performing this Paath one can have qualities of Lord Rama who is expert in removing
+                              hurdles and protecting the Family ethically. The benefits of Akhand Ramayana are innumerable but 
+                              few of them are: It provides Peace, Prosperity & Happiness in the family. 
+                            It is considered auspicious for beginning of any new venture like starting of a Business, Entering
+                             a New House (Grah Pravesh), Birth of a Child, Marriage Ceremony, etc. 
+                            It prevents any unexpected harm and danger especially related to Health. 
+                            It creates a very pious and divine atmosphere at a place. 
+                            A good time to do this puja is Ram Navmi which is considered as the day of birth of Lord Rama. 
+  
+                        </p>
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +46,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
