--- a/views/annaprashan.hbs
+++ b/views/annaprashan.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Annaprashan Puja</title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
