--- a/views/billing-form.hbs
+++ b/views/billing-form.hbs
@@ -4,8 +4,14 @@
     <head>
         <meta charset="utf-8">
         <title>Billing Page </title>
+        <script>
+            $(document).ready(function(){
+        
+                    $("#pooja_date").datepicker();
+                });
+    </script>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h1>Billing address</h1>
@@ -18,6 +24,14 @@
                            </label> 
                            <input type="text" class="form-control" name="cust_name" placeholder="Enter your name">
                         </div>
+                        <div class="row form-group col-md-8">
+                            
+                            <label class="control-label col-form-label col-sm-5">
+                                Enter your date:
+                            </label>
+                            <input type="date" id="pooja_date" name="pooja-date" class="form-control" placeholder="" maxlength="15">
+                        </div>
+                        
                         <div class="row form-group col-md-8">
                            <label class="control-label col-form-label col-sm-5">
                                State:
