--- a/views/birthday-puja.hbs
+++ b/views/birthday-puja.hbs
@@ -3,22 +3,32 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Birthday Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Birthday Puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/birthday-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>The most important day in a person’s life is his own birthday. A Birthday Puja being conducted
+                             on your birthday is very special, indeed, as your date of birth holds maximum significance in
+                              your life. Whether one is six years old or 60 years old, one’s birthday remains a very important
+                               day. By performing a puja on this very important day of your life, one receives the blessings of
+                                god as well as gets an opportunity to thank him.
+                            A birthday is a very special day in each one of our lives. Puja becomes necessary to exhibit
+                             our devotion to God throughout the year. It will help us get love and happiness in life by removing
+                              all the obstacles coming in the devotee’s life and pave the way for growth or to have a prosperous year
+                               ahead. It is also recommended as it increases one’s life. 
+ 
+                        </p>
+                               
                     </div>
                 </div>
                 <hr>
@@ -36,6 +46,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
