--- a/views/contact-us.hbs
+++ b/views/contact-us.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Contact us</title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h3 style="margin-top: 142px;"> Contact us at:</h3>
