--- a/views/durga.hbs
+++ b/views/durga.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Durga </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2>Durga ji</h2>
