--- a/views/error.hbs
+++ b/views/error.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Error </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h1>Message</h2>
