--- a/views/ganesh.hbs
+++ b/views/ganesh.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Ganesh </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2>Ganesh ji</h2>
