--- a/views/ganpati-sthapna.hbs
+++ b/views/ganpati-sthapna.hbs
@@ -3,22 +3,35 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Ganpati Sthapna Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Ganpati Sthapna Puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/ganpati-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Ganesh Chaturthi is celebrated as birth anniversary of Lord Ganesh. On Ganesh Chaturthi, Lord
+                             Ganesh is worshipped as the god of wisdom, prosperity and good fortune. It is believed that
+                              Lord Ganesh was born during Shukla Paksha of Bhadrapada month. Currently Ganesh Chaturthi day 
+                              falls in month of August or September in English calendar. 
+                            The Ganeshotsav, the festivity of Ganesh Chaturthi, ends after 10 days on Anant Chaturdashi which
+                             is also known as Ganesh Visarjan day. On Anant Chaturdashi, devotees immerse idol of Lord Ganesh
+                              in water body after a gala street procession The Ganeshotsav, the festivity of Ganesh Chaturthi,
+                               ends after 10 days on Anant Chaturdashi which is also known as Ganesh Visarjan day On Ganesh Chaturthi,
+                                devotees of Lord Ganesha bring home Ganesh idols and worship them for 1 and half, 3, 5, 7 or 9 days
+                                 and then immerse the Lord Ganesha idol in water.you can book panditji online for ganpati sthapna and
+                                  visarjan. 
+
+ 
+                        </p>
+                               
                     </div>
                 </div>
                 <hr>
@@ -36,6 +49,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
