--- a/views/hanuman-puja.hbs
+++ b/views/hanuman-puja.hbs
@@ -3,22 +3,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Hanuman puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Hanuman puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/hanuman-chalisa.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>The Hanuman Chalisa is a Hindu devotional hymn addressed to Hanuman.It is traditionally believed
+                             to have been authored by 16th-century poet Tulsidas in the Awadhi language,The word "chalisa" is
+                              derived from "chalis", which means the number forty in Hindi, as the Hanuman Chalisa has 40 verses
+                              .The benefits of chanting or listening to Hanuman Chalisa are infinite and incredible. It is believed 
+                              that if a devotee recites these 40 verses with pure devotion and focus, he or she gets rewarded and 
+                              all the wishes come true. Regular recitation of the Chalisa bestows you with the Lord’s blessings 
+                              and grace you with glorious powers. Daily recitation of Hanuman Chalisa with dedication and 
+                              devotion eliminate all sorts of disagreements and arguments in a family and promotes unanimity,
+                               contentment, happiness and peace in life. It removes negativity and brings harmony in relationships.  
+                        </p>
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +45,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
