--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Billing Page </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         
         <h1>Title</h1>
         <p>Welcome to {}</p>
