--- a/views/laghu-rudra-puja.hbs
+++ b/views/laghu-rudra-puja.hbs
@@ -3,22 +3,33 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Laghu Rudra puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Laghu Rudra puja 
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/laghu-rudra.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Laghu Rudra Abhishek is associated with Lord Shiva and therefore, the divine powers of Lord fill
+                             the life of devotees with prosperity and well being. This Puja is considered the best in order
+                              to please Lord Shiva and devotees seek his blessings for the removal of problems and difficulties
+                               from their life. For devotees, Lord Shiva is the one who provides grace, wealth, power, health
+                                and happiness. He is the union of both male and female energies as he is the Ardhnarishwar. 
+                                It is said the key of Lord Kubera’s wealth is held by Lord Shiva. All nine planets are supposed
+                                 to be under the domain of Shiva and hence his propitiation leads to gain in career, job, business,
+                                  relationship marriage and health. Laghu Rudraabhishek puja provides methods for living a trouble
+                                   free life by removing karmic issues and other issues in an effective manner. If one is going
+                                    through a specific problem, the Laghu Rudra Puja is good solution to it. 
+
+                        </p>
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +47,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
