--- a/views/login-pandit.hbs
+++ b/views/login-pandit.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Login </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h1>Login</h1>
