--- a/views/navratri-puja.hbs
+++ b/views/navratri-puja.hbs
@@ -3,22 +3,30 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Navratri puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Navratri puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/navratri.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Ghatasthapana is one of the significant rituals during Navratri. It marks the beginning of nine
+                             days festivity. Our scriptures have well defined rules and guidelines to perform Ghatasthapana
+                              during a certain period of time at the beginning of Navratri. Ghatasthapana is invocation of
+                               Goddess Shakti and doing it wrong time, as our scriptures forewarn, might bring wrath of the
+                                Goddess Shakti. Ghatasthapana is prohibited during Amavasya and night time. The most auspicious or Shubh
+                                 time to do Ghatasthapana is first one third of the day while Pratipada is prevailing. If due to some
+                                  reasons this time is not available then Ghatasthapana can be done during Abhijit Muhurta. It is advised
+                                   to avoid Nakshatra Chitra and Vaidhriti Yoga during Ghatasthapana but those are not prohibited. The most
+                                    important factor to consider is that Ghatasthapana is done before Hindu midday while Pratipada is prevailing. 
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +44,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
