--- a/views/pandit-in-indore.hbs
+++ b/views/pandit-in-indore.hbs
@@ -5,7 +5,7 @@
         <title>Pandit in Indore </title>
         <link rel="stylesheet" href="/stylesheets/modal.css">
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
                 
         <div class="container">
