--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -6,7 +6,7 @@
     <script src="/javascripts/jquery-3.3.1.min.js"></script>
 </head>
 
-<footer id="footer" style="background-color:#7e7b7b;">
+<footer id="footer" style="background-color:#f8ae4f;;">
     <div class="container">
         <ul class="icons">
             <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
