--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,7 +7,7 @@
 </head>
 
 <header>
-   <nav class="navbar navbar-expand-lg navbar-light nav-style" style="background-color: #7e7b7b;">
+   <nav class="navbar navbar-expand-lg navbar-light nav-style" style="background-color: #f8ae4f;">
         <a class="navbar-brand" href="/users/home-page">FindUrPanditji</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
