--- a/views/registration-pandit.hbs
+++ b/views/registration-pandit.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Registration </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container" >
             
