--- a/views/saraswati.hbs
+++ b/views/saraswati.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Saraswati </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2>Saraswati ji</h2>
