--- a/views/shiv-puja.hbs
+++ b/views/shiv-puja.hbs
@@ -3,22 +3,27 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Shiv puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Shiv puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/shiv-puja.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>You can do this Shiva Puja on Shivaratri and other occasions to please Lord Shiva and to destroy
+                             your all sins. Shiva Puja is the worship of Lord Shiva – known as “The Destroyer” in Hinduism.
+                              Lord Shiva always remains in samadhi or trance. He took incarnation as Shiva Linga on 14th day
+                               of waning moon of Falgun month of Hindi Calendar.There are many traditional and ancient rites to
+                                worship Lord Shiva with the use of abhisheka, mantra, tantra, kriyas, and mudras. The items and
+                                 the process of Shiva Puja also vary in various sects. 
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +41,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
