--- a/views/shiv.hbs
+++ b/views/shiv.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Shiv </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2>Shiv Ji</h2>
