--- a/views/vishnu-sahasranama.hbs
+++ b/views/vishnu-sahasranama.hbs
@@ -3,22 +3,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Vishnu Sahasranama Puja page </title>
     </head>
     <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Vishnu Sahasranama Puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/shrivishnu.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Since Lord Vishu is one of the most power gods known to mankind, hence, it is quite significant
+                             to do the Vishnu Sahasranam Puja. This puja is also done to bring happiness and prosperity in
+                              a husband and wife’s married life. Hence, for newlyweds, or even an old couple for that
+                               matter, this is a very significant pujan.
+                            This pooja of Lord Vishnu is done with the shodasopacharas, i.e. it is the chanting of vishnusooktam
+                            , purushasooktam, and narayanopanishat and 1008 namavili jap of Lord Vishnu. These chanting have
+                             to done in your name and also your wish. 
+
+                        </p>
+                        
+                        
                     </div>
                 </div>
                 <hr>
@@ -36,6 +45,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
