--- a/views/vishnu.hbs
+++ b/views/vishnu.hbs
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Vishnu </title>
     </head>
-    <body>
+    <body style="background-color: #fbedbf;">
         {{> header}}
         <div class="container">
             <h2>Vishnu ji</h2>
